Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-75816

Editable QComboBox, parent background color drawn partially in edit area

    XMLWordPrintable

Details

    • Windows
    • 81b33a8252d8a69277782f51c9c7401c7009c72e (qt/qtbase/5.12)

    Description

      Editable QComboBox by default has clearly visible border lines. In the case that parent widget has a background color set & the application uses "fusion" style the parent widget background color will be partially drawn inside the combobox edit area. For reference, see sample.png.

      The method of applying the background color seems irrelevant as the result will look the same regardless of whether the background color was applied with stylesheet or qpalette.

      This is a regression from Qt 5.11.

      Steps to reproduce:

      Run the attached project.

      Attachments

        1. sample.PNG
          5 kB
          Miika Pernu
        2. qt-bug-fusion.zip
          1 kB
          Miika Pernu
        3. qtbug75816.zip
          2 kB
          Friedemann Kleint
        4. qtbug75816.jpg
          39 kB
          Friedemann Kleint

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              andysh Andy Shaw
              miikapernu Miika Pernu
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes